--- a/DESeq2_analysis.Rmd
+++ b/DESeq2_analysis.Rmd
@@ -14,41 +14,34 @@ library(DT)
 
 ui <- fluidPage(
 
-    ## Application title displayed at the top
-    titlePanel("RNA-seq DESeq2 Explorer — With Pathway Gene Highlighting"),
+    titlePanel("RNA-seq DESeq2 Explorer"),
 
     sidebarLayout(
         sidebarPanel(
 
-            ## Upload raw count matrix (genes x samples)
             fileInput("counts", "Upload count_matrix.tsv"),
-
-            ## Upload sample metadata (rows = samples)
             fileInput("sampleinfo", "Upload sample_info.csv"),
 
-            ## Choose which metadata column defines the contrast
-            selectInput("contrast_group",
-                        "Choose grouping column:",
-                        choices = c("condition", "strain_group"),
-                        selected = "condition"),
+            selectInput(
+                "contrast_group",
+                "Choose grouping column for DESeq2:",
+                choices = c("strain", "condition", "group"),
+                selected = "strain"
+            ),
 
-            ## UI generated dynamically based on selected grouping
             uiOutput("level_selector"),
 
-            ## Gene highlighting section
-            h4("Select genes to inspect:"),
+            h4("Select genes to highlight:"),
             uiOutput("gene_select_ui"),
 
-            ## Button ensures DESeq2 only runs when explicitly requested
             actionButton("run", "Run DESeq2", class = "btn-primary")
         ),
 
         mainPanel(
-            ## Results are organised into tabs
             tabsetPanel(
-                tabPanel("PCA Plot", plotOutput("pcaPlot", height="500px")),
-                tabPanel("MA Plot", plotOutput("maPlot", height="500px")),
-                tabPanel("Volcano Plot", plotOutput("volcanoPlot", height="500px")),
+                tabPanel("PCA Plot", plotOutput("pcaPlot", height = "520px")),
+                tabPanel("MA Plot", plotOutput("maPlot", height = "500px")),
+                tabPanel("Volcano Plot", plotOutput("volcanoPlot", height = "500px")),
                 tabPanel("Selected Gene Stats", dataTableOutput("geneStatsTable")),
                 tabPanel("DE Results (All Genes)", dataTableOutput("resultsTable"))
             )
@@ -56,93 +49,54 @@ ui <- fluidPage(
     )
 )
 
-
 server <- function(input, output, session) {
 
     ### ===================== Data Loading ======================
 
-       ## Reactive expression to load the count matrix
-    ## Triggered automatically when a file is uploaded
     counts_data <- reactive({
         req(input$counts)
-        read.table(
-            input$counts$datapath,
-            header = TRUE,
-            row.names = 1,
-            sep = "\t"
-        )
+        read.table(input$counts$datapath, header = TRUE, row.names = 1, sep = "\t")
     })
 
-    ## Reactive expression to load sample metadata
     sample_info <- reactive({
         req(input$sampleinfo)
-        read.csv(
-            input$sampleinfo$datapath,
-            row.names = 1
-        )
+        read.csv(input$sampleinfo$datapath, row.names = 1)
     })
-
 
     ### ===================== Dynamic Contrast UI ======================
 
-        ## Dynamically generate contrast selector
-    ## Levels depend on the selected grouping column
     output$level_selector <- renderUI({
         req(sample_info())
-
         cond_col <- input$contrast_group
         levs <- unique(sample_info()[[cond_col]])
-
-        ## Generate all pairwise comparisons
         selectInput(
             "contrast",
             "Choose comparison:",
-            choices = combn(
-                levs,
-                2,
-                FUN = function(x) paste(x[1], x[2], sep = " vs ")
-            )
+            choices = combn(levs, 2, FUN = function(x) paste(x[1], x[2], sep = " vs "))
         )
     })
 
+    ### ===================== DESeq2 ======================
 
-    ### ===================== DESeq2 run ======================
-
-    
-    ## This avoids unnecessary re-computation
     dds_result <- eventReactive(input$run, {
-
         count_matrix <- counts_data()
-        sampleinfo <- sample_info()
+        meta <- sample_info()
 
-        ## Ensure sample order matches between counts and metadata
-        stopifnot(all(colnames(count_matrix) == rownames(sampleinfo)))
+        stopifnot(all(colnames(count_matrix) == rownames(meta)))
 
-        cond_col <- input$contrast_group
-
-        ## Create DESeq2 dataset
         dds <- DESeqDataSetFromMatrix(
             countData = count_matrix,
-            colData = sampleinfo,
-            design = as.formula(paste("~", cond_col))
+            colData = meta,
+            design = as.formula(paste("~", input$contrast_group))
         )
 
-        ## Filter low-expression genes
         dds <- dds[rowSums(counts(dds)) > 10, ]
-
-        ## Perform normalization, dispersion estimation and model fitting
-        dds <- DESeq(dds)
-
-        return(dds)
+        DESeq(dds)
     })
 
-
     ### ===================== Pathway Gene Mapping ======================
-    #    ## Manually defined pathway gene mapping
-    ## Names = readable gene symbols
-    ## Values = internal gene IDs used in the count matrix
-    pathway_gene_map <- reactive({
 
+    pathway_gene_map <- reactive({
         c(
             "ICL1" = "gene:CENPK1137D_3473",
             "MLS1" = "gene:CENPK1137D_2563",
@@ -152,180 +106,172 @@ server <- function(input, output, session) {
         )
     })
 
-
-    ### ===================== Gene selector UI ======================
-
-       ## Allows users to select genes for highlighting
     output$gene_select_ui <- renderUI({
         selectizeInput(
             "targetGenes",
             "Highlight genes:",
             choices = names(pathway_gene_map()),
-            multiple = TRUE,
-            selected = NULL
+            multiple = TRUE
         )
     })
 
+    ### ===================== DE Results ======================
 
-    ### ===================== DE Results with qvalues ======================
-
-       ## Extract DE results for selected contrast
-    ## Adds independent FDR correction using fdrtool
     de_results_df <- reactive({
         req(dds_result())
-
-        cond_col <- input$contrast_group
         groups <- strsplit(input$contrast, " vs ")[[1]]
-
-        ## Extract DESeq2 results
-        res <- results(
-            dds_result(),
-            contrast = c(cond_col, groups[1], groups[2])
-        )
-
+        res <- results(dds_result(), contrast = c(input$contrast_group, groups[1], groups[2]))
         df <- as.data.frame(res)
-
-        ## Compute q-values from raw p-values
-        df$qvalue <- fdrtool(
-            df$pvalue,
-            statistic = "pvalue",
-            plot = FALSE
-        )$qval
-
-        return(df)
+        df$qvalue <- fdrtool(df$pvalue, statistic = "pvalue", plot = FALSE)$qval
+        df
     })
 
     ### ===================== PCA ======================
+    
+output$pcaPlot <- renderPlot({
+  req(dds_result(), sample_info())
 
-       output$pcaPlot <- renderPlot({
-        req(dds_result())
+  vsd <- vst(dds_result(), blind = TRUE)
+  pca <- prcomp(t(assay(vsd)))
+  percentVar <- round(100 * pca$sdev^2 / sum(pca$sdev^2), 1)
 
-        ## Variance stabilizing transformation
-        vsd <- vst(dds_result())
+  meta <- sample_info()
 
-        ## PCA on transformed counts
-        pca <- prcomp(t(assay(vsd)))
+  df <- data.frame(
+    PC1 = pca$x[, 1],
+    PC2 = pca$x[, 2],
+    strain = tolower(trimws(meta$strain)),     # producer / evolved / wt
+    condition = trimws(meta$condition)         # F / Mz / Sz / WT
+  )
 
-        percentVar <- round(
-            100 * pca$sdev^2 / sum(pca$sdev^2),
-            1
+  df$state <- dplyr::case_when(
+    df$strain == "producer" ~ "Parental",
+    df$strain == "evolved"  ~ "Evolved",
+    df$strain == "wt"       ~ "WT"
+  )
+  df$state <- factor(df$state, levels = c("WT", "Parental", "Evolved"))
+
+  df$condition <- factor(df$condition, levels = c("WT", "F", "Mz", "Sz"))
+
+  ggplot(df, aes(PC1, PC2)) +
+
+    ## baseline
+    geom_hline(yintercept = 0, linetype = "dashed", colour = "grey60") +
+    geom_vline(xintercept = 0, linetype = "dashed", colour = "grey60") +
+
+    ## PCA spot
+    geom_point(
+      aes(shape = state, colour = condition),
+      size = 4,
+      stroke = 1.2
+    ) +
+
+    ## shape
+    scale_shape_manual(values = c(
+      "WT"        = 15,  
+      "Parental" = 17,  
+      "Evolved"  = 16  
+    )) +
+
+    ## colour
+    scale_colour_manual(values = c(
+      "WT" = "black",
+      "F"  = "#E69F00",
+      "Mz" = "#1B7837",
+      "Sz" = "#0072B2"
+    )) +
+
+  
+    scale_x_continuous(
+      breaks = function(lims) {
+        seq(
+          from = floor(lims[1] / 10) * 10,
+          to   = ceiling(lims[2] / 10) * 10,
+          by   = 10
         )
-
-        cond <- dds_result()[[input$contrast_group]]
-
-        df <- data.frame(
-            PC1 = pca$x[,1],
-            PC2 = pca$x[,2],
-            cond = cond
+      }
+    ) +
+    scale_y_continuous(
+      breaks = function(lims) {
+        seq(
+          from = floor(lims[1] / 10) * 10,
+          to   = ceiling(lims[2] / 10) * 10,
+          by   = 10
         )
+      }
+    ) +
 
-        ggplot(df, aes(PC1, PC2, color = cond)) +
-            geom_point(size = 5, alpha = .8) +
-            geom_hline(yintercept = 0, linetype = "dashed", color = "grey50") +
-            geom_vline(xintercept = 0, linetype = "dashed", color = "grey50") +
-            xlab(paste0("PC1 (", percentVar[1], "%)")) +
-            ylab(paste0("PC2 (", percentVar[2], "%)")) +
-            theme_minimal(base_size = 16)
-    })
+    xlab(paste0("PC1 (", percentVar[1], "% variance)")) +
+    ylab(paste0("PC2 (", percentVar[2], "% variance)")) +
+
+    theme_classic(base_size = 16) +
+    theme(
+      legend.title = element_blank(),
+
+      legend.position = "bottom",
+      legend.justification = "left",
+
+      legend.box = "horizontal"
+    ) +
+
+    guides(
+      colour = guide_legend(ncol = 3, byrow = TRUE),
+      shape  = guide_legend(ncol = 3, byrow = TRUE)
+    )
+})
+
+
 
 
     ### ===================== MA Plot ======================
 
-       output$maPlot <- renderPlot({
-
+    output$maPlot <- renderPlot({
         df <- de_results_df()
         df$log10base <- log10(df$baseMean + 1)
-
-        sel_map <- pathway_gene_map()
-        highlight_ids <- sel_map[input$targetGenes]
+        highlight_ids <- pathway_gene_map()[input$targetGenes]
 
         ggplot(df, aes(log10base, log2FoldChange)) +
-
-            ## Base MA plot with significance colouring
-            geom_point(aes(color = (qvalue < 0.1)), alpha = 0.5) +
-            scale_color_manual(
-                values = c("grey60", "red"),
-                name = "Significant (q < 0.1)"
-            ) +
-
-            ## Overlay highlighted pathway genes
+            geom_point(aes(color = qvalue < 0.1), alpha = 0.5) +
+            scale_color_manual(values = c("grey60", "red")) +
             geom_point(
                 data = df[rownames(df) %in% highlight_ids, ],
-                color = "gold",
-                size = 3,
-                shape = 8
+                color = "gold", size = 3, shape = 8
             ) +
-
             theme_minimal(base_size = 16) +
             xlab("log10(baseMean)") +
-            ggtitle("MA Plot (with Highlighted Pathway Genes)")
+            ylab("log2 Fold Change")
     })
-
-
 
     ### ===================== Volcano Plot ======================
 
-      output$volcanoPlot <- renderPlot({
-
+    output$volcanoPlot <- renderPlot({
         df <- de_results_df()
         df$log10p <- -log10(df$pvalue)
-
-        sel_map <- pathway_gene_map()
-        highlight_ids <- sel_map[input$targetGenes]
+        highlight_ids <- pathway_gene_map()[input$targetGenes]
 
         ggplot(df, aes(log2FoldChange, log10p)) +
-
-            ## Significance colouring
-            geom_point(aes(color = (qvalue < 0.1)), alpha = 0.6) +
-            scale_color_manual(
-                values = c("black", "red"),
-                name = "Significant (q < 0.1)"
-            ) +
-
-            ## Highlight pathway genes
+            geom_point(aes(color = qvalue < 0.1), alpha = 0.6) +
+            scale_color_manual(values = c("black", "red")) +
             geom_point(
                 data = df[rownames(df) %in% highlight_ids, ],
-                color = "gold",
-                size = 3,
-                shape = 8
+                color = "gold", size = 3, shape = 8
             ) +
-
+            geom_hline(yintercept = -log10(0.05), linetype = "dashed") +
+            geom_vline(xintercept = c(-1, 1), linetype = "dashed") +
             theme_minimal(base_size = 16) +
             xlab("log2 Fold Change") +
-            ylab("-log10(p-value)") +
-            ggtitle("Volcano Plot (with Highlighted Pathway Genes)") +
-            geom_hline(yintercept = -log10(0.05), linetype = "dashed", color = "blue") +
-            geom_vline(xintercept = c(-1, 1), linetype = "dashed", color = "blue")
+            ylab("-log10(p-value)")
     })
 
+    ### ===================== Tables ======================
 
-
-    ### ===================== Selected Gene Table ======================
-
-        output$geneStatsTable <- renderDataTable({
-
+    output$geneStatsTable <- renderDataTable({
         df <- de_results_df()
-        selected <- input$targetGenes
-
-        ## Do nothing if no genes selected
-        if (length(selected) == 0) return(NULL)
-
-        ids <- pathway_gene_map()[selected]
+        ids <- pathway_gene_map()[input$targetGenes]
         out <- df[rownames(df) %in% ids, ]
-
-        ## Add readable gene names
-        out$gene_name <- names(ids)[match(rownames(out), ids)]
-
-        datatable(
-            out[, c("gene_name", "log2FoldChange", "pvalue", "qvalue", "baseMean")],
-            filter = "top",
-            options = list(pageLength = 15)
-        )
+        out$gene <- names(ids)[match(rownames(out), ids)]
+        datatable(out)
     })
-
-
-
-    ### ===================== All DE Genes Table ======================
 
     output$resultsTable <- renderDataTable({
         de_results_df()
@@ -333,6 +279,8 @@ server <- function(input, output, session) {
 }
 
 shinyApp(ui, server)
+
 ```
+
 
 
